@@ -37,9 +37,13 @@ public interface Factory<T> {
       List<T1> t1s = factory1.build(n, random);
       List<T2> t2s = factory2.build(n, random);
       if (t1s.size() != n || t2s.size() != n) {
-        throw new RuntimeException(String.format(
-            "The two internal factories produced a different number of elements:" + " %d and %d",
-            t1s.size(), t2s.size()));
+        throw new RuntimeException(
+            String.format(
+                "The two internal factories produced a different number of elements:" + " %d and %d",
+                t1s.size(),
+                t2s.size()
+            )
+        );
       }
       List<Pair<T1, T2>> pairs = new ArrayList<>(n);
       for (int i = 0; i < n; i++) {
@@ -51,7 +55,7 @@ public interface Factory<T> {
 
   default IndependentFactory<T> independent() {
     Factory<T> thisFactory = this;
-    return random -> thisFactory.build(1, random).get(0);
+    return random -> thisFactory.build(1, random).getFirst();
   }
 
   default <K> Factory<K> then(Function<T, K> f) {
