@@ -33,7 +33,8 @@ public interface Crossover<G> extends GeneticOperator<G> {
   static <G1, G2> Crossover<Pair<G1, G2>> pair(Crossover<G1> crossover1, Crossover<G2> crossover2) {
     return (p1, p2, random) -> new Pair<>(
         crossover1.recombine(p1.first(), p2.first(), random),
-        crossover2.recombine(p1.second(), p2.second(), random));
+        crossover2.recombine(p1.second(), p2.second(), random)
+    );
   }
 
   @SuppressWarnings("unused")
@@ -42,7 +43,7 @@ public interface Crossover<G> extends GeneticOperator<G> {
   }
 
   static <K> Crossover<K> from(GeneticOperator<K> op) {
-    return (g1, g2, random) -> op.apply(List.of(g1, g2), random).get(0);
+    return (g1, g2, random) -> op.apply(List.of(g1, g2), random).getFirst();
   }
 
   @Override
