@@ -39,7 +39,10 @@ public class BitStringChooser<S, O> implements Chooser<S, O> {
   }
 
   public static <S, D, O> Function<BitString, D> mapper(
-      Grammar<S, O> grammar, Developer<S, D, O> developer, D defaultDeveloped) {
+      Grammar<S, O> grammar,
+      Developer<S, D, O> developer,
+      D defaultDeveloped
+  ) {
     return is -> {
       BitStringChooser<S, O> chooser = new BitStringChooser<>(is, grammar);
       return developer.develop(chooser).orElse(defaultDeveloped);
@@ -51,7 +54,7 @@ public class BitStringChooser<S, O> implements Chooser<S, O> {
     // count options
     List<O> options = grammar.rules().get(s);
     if (options.size() == 1) {
-      return Optional.of(options.get(0));
+      return Optional.of(options.getFirst());
     }
     int bits = (int) Math.ceil(Math.log(options.size()) / Math.log(2d));
     if (i + bits >= bitString.size()) {
