@@ -61,14 +61,15 @@ public class LogCapturer extends Handler {
       synchronized (logRecords) {
         logRecords.add(record);
         while (logRecords.size() > LOG_HISTORY_SIZE) {
-          logRecords.remove(0);
+          logRecords.removeFirst();
         }
       }
     }
   }
 
   @Override
-  public void flush() {}
+  public void flush() {
+  }
 
   @Override
   public void close() throws SecurityException {
